# PromptEnhancer

./: .env.example  .gitignore  README.md  package-lock.json  package.json
docs/: index.html
prompts/: enhancer-system-prompt.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  enhance.rs  hotkey.rs  lib.rs  main.rs  projects.rs  settings.rs  status_window.rs  tray.rs  updater.rs
src/components/: ClarifyPopup.css  ClarifyPopup.tsx  ProjectManager.css  ProjectManager.tsx  Settings.css  Settings.tsx  StatusIndicator.css  StatusIndicator.tsx
