[package]
name = "promptforge"
version = "0.1.0"
description = "PromptForge — system-tray prompt enhancer"
authors = ["PromptForge"]
edition = "2021"

[lib]
name = "promptforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
